tests/baselines/reference/functionOverloads6(strict=true).errors.txt
functionOverloads6.ts(2,11): error TS7010: 'fnOverload', which lacks return-type annotation, implicitly has an 'any' return type.
functionOverloads6.ts(3,11): error TS7010: 'fnOverload', which lacks return-type annotation, implicitly has an 'any' return type.


==== functionOverloads6.ts (2 errors) ====
    class foo { 
       static fnOverload();
              ~~~~~~~~~~
!!! error TS7010: 'fnOverload', which lacks return-type annotation, implicitly has an 'any' return type.
       static fnOverload(foo:string);
              ~~~~~~~~~~
!!! error TS7010: 'fnOverload', which lacks return-type annotation, implicitly has an 'any' return type.
       static fnOverload(foo?: any){ }
    }
    